umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_extended_molecule_chemdoodle_ringSystem1.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 29
bond_count: 32
sum_formula: C21ClFN3OS2
graph6: "\\????@?O?D?A?E@W?_@?GA????_?@C??W??IA??????_W?????A???AA???O???A????K"
