umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_extended_molecule_chemdraw_ITIC.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 104
bond_count: 118
sum_formula: C94N4O2S4
graph6: ~?@gkH?GC@?G?_@?@@G_G?C??????G??G??C??@???G???_?A@???@???C_??GG???@???_C????G??O?G????C????@?????G?????_????@?????@?????C_????GG??O??@??????C??????G??????G??????C??????@??????AG??????A???????@???????@????????_???????G???????@??????C??????????G????????G????????C????????@????????AG????????A?????????@?????????@??????????_?????????G?????????@????C????????????????G??????????G??????????C??????????@??????????AG??????????A???????????@???????????@????????????_???????????G???????????@????C????????????????????G????????????G????????????C????????????@????????????AG????????????A?????????????@?????????????@??????????????_?????????????G?????????????@?????@??????????????????????????????????????W??????????????C??????????????@???????????????G???????????????_??????????????@???????????????@??????????????@G_??????????????G???????????????G?????????????????C????????????????G????????????????_????????????????C
