umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_extended_molecule_chemsketch_nitrotoluol.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 41
bond_count: 39
sum_formula: C28HN4O8+2
graph6: "hhEK??@?O??@???A_?G?@??C?AG?C??O???????G??@???????@???G_???G???@???@C???C??????????C????A???????????_????@?????`??????_????AG?????_???????"
