umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_extended_molecule_corina_3K5C-BACE_7.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 99
bond_count: 103
sum_formula: C40H51N4O4+1
graph6: ~?@bkCgOCA?G?_@?@??_?G?@??C??G??G??G??G???G?@?_@???C??????_???G???@????C????G????G????C_???@?????G????A?????@????O?_???????????G?????@??????C?????@G?????????????C??????@?????A?G???????_??????PO???????C????????_???????@????????C????????G????????G????????G????????A?????????O????????A?????????A?????????@??????????_?????????O?????????C??????????O?????????@??????????A??????????@???????????O??????????A???????????G???????????O???????????_???????????O???????????C???????????@????????????C????????????O????????????O????????????O????????????C????????????@?????????????C?????????????O?????????????A?????????????@??????????????_?????????????G??????????????_?????????????A??????????????C???????????????_??????????????G???????????????_??????????????A???????????????C???????????????A???????????????@??????????O??????????????
